[package]
name = "makecbz"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.14"
simple_logger = { version="2.1.0", features=["colors"]}
structopt = "0.3.26"
rayon = "1.5.2"
itertools = "0.10.3"
zip = "0.6.2"